Booking bar, streamfield elements and price

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.yaml
@@ -7,6 +7,7 @@ context:
     type: Exhibition
     schedule: true
     add_to_calendar: true
+    price: false
     series:
       items:
         - {
