Adding reading time and sorting key detail links

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.yaml
@@ -8,6 +8,7 @@ context:
     schedule: true
     add_to_calendar: true
     price: false
+    read_time: 10 mins
     series:
       items:
         - {
