--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail--past.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail--past.yaml
@@ -47,7 +47,9 @@ context:
           link: '#'
     contact: true
     contact_model_image: true
+    contact_model_text: Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
     series:
+      introduction: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
       items:
         - {
             title: 'Innovation RCA',
