--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_index.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_index.yaml
@@ -149,3 +149,6 @@ context:
     - { title: 'Dr Josephine Berry', image: true, link: '#' }
     - { title: 'Guilhermina Torrao', image: true, link: '#' }
     - { title: 'Stephen Douch', image: true, link: '#' }
+
+tags:
+  get_all_active_filters: false
