--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.yaml
@@ -14,7 +14,7 @@ context:
         filter_name: school_or_centre
         queryset: true
         options:
-          - { title: 3D modelling & visualisation, id: '1-1', active: true }
+          - { title: 3D modelling & visualisation, id: '1-1', active: false }
           - { title: Art & curating, id: '1-2', active: false }
           - { title: Creative industries, id: '1-3', active: false }
           - { title: Critical practice, id: '1-4', active: false }
@@ -22,7 +22,7 @@ context:
           - { title: Digital futures, id: '1-6', active: false }
           - { title: Emerging technologies, id: '1-7', active: false }
           - { title: Engineering design, id: '1-8', active: false }
-          - { title: Future cities, id: '1-9', active: true }
+          - { title: Future cities, id: '1-9', active: false }
       - tab_title: Type
         filter_name: type
         queryset: true
@@ -52,12 +52,23 @@ context:
           - { title: Robotics & AI, id: '3-16', active: false }
           - { title: Service & UX design, id: '3-17', active: false }
           - { title: Sustainable society, id: '3-18', active: false }
-  show_featured_project: true
-  featured_project:
-    title: Marked (Working Title)
-    introduction: Electronic Skin Nanopatches for Continuous Blood Pressure Monitoring
-    listing_summary: Generating new technologies, knowledge and understanding, critical for moving invention in wearable technology forward.
-    url: '#'
+  show_featured_editorial: true
+  featured_editorial:
+    - slide:
+      title: 'Lorem ipsum dolor sit'
+      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      image: true
+      link: '#'
+    - slide:
+      title: 'Lorem ipsum dolor sit'
+      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      image: true
+      link: '#'
+    - slide:
+      title: 'Lorem ipsum dolor sit'
+      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      image: true
+      link: '#'
   results:
     - {
         school: 'School of Arts & Humanities',
