[882] add event page partners carousel

--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.yaml
@@ -27,7 +27,7 @@ context:
     manual_registration_url: '#'
     body:
       - dummy
-    collaborators:
+    partners:
       - slide:
         value:
           link:
