Feedback from Nancy
https://projects.torchbox.com/projects/rca-website-rebuild/tickets/794

--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.yaml
@@ -87,7 +87,7 @@ context:
   related_staff:
     view_more_link: false
   booking_bar:
-    message: 'Free event - Online - Tickets still available'
+    message: 'Free event | Online | Tickets still available'
     action: 'Book now'
   related_pages:
     title: Also of interest
