[873] update event page date in yaml

--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.yaml
@@ -11,7 +11,7 @@ context:
         depth: 3
         title: Events
     introduction: '<p>Situated within the Royal College of Art, a world-leading art and design institution, the programme encourages interdisciplinary and cross-disciplinary research projects in…</p>'
-    event_date: !!timestamp '2020-12-13 2:00:00'
+    event_date: '13 December 2020'
     event_startDate: !!timestamp '2020-12-13 2:00:00+01:00'
     event_endDate: !!timestamp '2020-12-16 2:00:00+01:00'
     event_time: 5pm – 8pm
