Hide editors picks if there are filters or pagination in the request

--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.yaml
@@ -52,7 +52,7 @@ context:
           - { title: Robotics & AI, id: '3-16', active: false }
           - { title: Service & UX design, id: '3-17', active: false }
           - { title: Sustainable society, id: '3-18', active: false }
-  show_featured_editorial: true
+  show_picks: true
   featured_editorial:
     - slide:
       title: 'Lorem ipsum dolor sit'
