Pluralise read time

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.yaml
@@ -17,4 +17,4 @@ tags:
   get_reading_time_minutes:
     "page 'body' as reading_time_minutes":
       target_var: reading_time_minutes
-      raw: 3
+      raw: 3 minutes
