[802] add event eligibility

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.yaml
@@ -3,7 +3,7 @@ context:
     event_time: 5pm – 8pm
     timezone: GMT +1
     location: Online
-    who_can_attend: Open to all
+    eligibility: Open to all
     type: Exhibition
     add_to_calendar: true
     price: false
