Adds video fields for talks section

--- a/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.yaml
@@ -9,11 +9,11 @@ context:
       link: '#'
     stories_summary_text: Characterised by its roots in creative and innovative practice, by engagement with partners in business, industry, government and communities.
     stories_link_target_url: '#'
-    talks_intro: The RCA is famed for its ability to attract leading practitioners and academics from across the creative spectrum.
-    talks_link: '#'
+    talks_summary_text: The RCA is famed for its ability to attract leading practitioners and academics from across the creative spectrum.
+    talks_link_target_url: '#'
     talks_image: true
-    talks_video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
-    talks_cta: Watch the course introduction
+    video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
+    video_caption: Watch the course introduction
     contact: true
     contact_image: true
     cta_block:
